# coffee-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  run-clang-format.bat
include/coffee/: coffee.hpp  engine.hpp  types.hpp  types.inl
include/coffee/abstract/: backend.hpp  barriers.hpp  buffer.hpp  command_buffer.hpp  cursor.hpp  descriptors.hpp  device.hpp  framebuffer.hpp  image.hpp  keys.hpp  monitor.hpp  pipeline.hpp  push_constant.hpp  render_pass.hpp  sampler.hpp  shader.hpp  shader_program.hpp  swap_chain.hpp  window.hpp
include/coffee/abstract/vulkan/: vk_backend.hpp  vk_buffer.hpp  vk_command_buffer.hpp  vk_descriptors.hpp  vk_device.hpp  vk_framebuffer.hpp  vk_image.hpp  vk_pipeline.hpp  vk_render_pass.hpp  vk_sampler.hpp  vk_shader.hpp  vk_swap_chain.hpp  vk_window.hpp
include/coffee/audio/: buffer.hpp  device.hpp  enums.hpp  exceptions.hpp  properties.hpp  source.hpp  stream.hpp
include/coffee/events/: application_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp  window_event.hpp
include/coffee/graphics/: aabb.hpp  buffer.hpp  command_buffer.hpp  compute_pipeline.hpp  cursor.hpp  descriptors.hpp  device.hpp  exceptions.hpp  fence.hpp  framebuffer.hpp  graphics_pipeline.hpp  image.hpp  materials.hpp  mesh.hpp  model.hpp  monitor.hpp  pipeline.hpp  render_pass.hpp  sampler.hpp  semaphore.hpp  shader.hpp  single_time.hpp  submesh.hpp  swap_chain.hpp  vertex.hpp  window.hpp
include/coffee/interfaces/: archive.hpp  asset_manager.hpp  deferred_requests.hpp  drawable.hpp  event_handler.hpp  exceptions.hpp  filesystem.hpp  keys.hpp  loop_handler.hpp  properties.hpp  resource_guard.hpp  scope_exit.hpp  scope_guard.hpp  thread_pool.hpp
include/coffee/objects/: aabb.hpp  materials.hpp  mesh.hpp  model.hpp  texture.hpp  vertex.hpp
include/coffee/utils/: exceptions.hpp  log.hpp  math.hpp  non_copyable.hpp  non_moveable.hpp  platform.hpp  utils.hpp  vk_utils.hpp
libs/: glm.patch  openal.patch  tbb.patch
libs/single-headers/xxh3/: xxhash.h
libs/single-headers/zstd/: zstd.c  zstddeclib.c
libs/vma/: vk_mem_alloc.h
libs/zstd/: zstddeclib.c
src/: engine.cpp
src/abstract/: backend.cpp  barriers.cpp  buffer.cpp  cursor.cpp  descriptors.cpp  device.cpp  framebuffer.cpp  image.cpp  monitor.cpp  pipeline.cpp  push_constant.cpp  shader.cpp  shader_program.cpp  swap_chain.cpp  window.cpp
src/abstract/vulkan/: vk_backend.cpp  vk_buffer.cpp  vk_command_buffer.cpp  vk_descriptors.cpp  vk_device.cpp  vk_framebuffer.cpp  vk_image.cpp  vk_pipeline.cpp  vk_render_pass.cpp  vk_sampler.cpp  vk_shader.cpp  vk_swap_chain.cpp  vk_window.cpp
src/audio/: device.cpp  source.cpp
src/events/: application_event.cpp  event.cpp  key_event.cpp  mouse_event.cpp  window_event.cpp
src/general/: thread_pool.cpp
src/graphics/: aabb.cpp  buffer.cpp  command_buffer.cpp  compute_pipeline.cpp  cursor.cpp  descriptors.cpp  device.cpp  exceptions.cpp  fence.cpp  framebuffer.cpp  graphics_pipeline.cpp  image.cpp  materials.cpp  mesh.cpp  model.cpp  monitor.cpp  pipeline.cpp  render_pass.cpp  sampler.cpp  semaphore.cpp  shader.cpp  submesh.cpp  swap_chain.cpp  vertex.cpp  window.cpp
src/interfaces/: archive.cpp  asset_manager.cpp  deferred_requests.cpp  filesystem.cpp  loop_handler.cpp  thread_pool.cpp
src/objects/: materials.cpp  mesh.cpp  model.cpp  texture.cpp  vertex.cpp
src/utils/: exceptions.cpp  log.cpp  utils.cpp  vk_utils.cpp
