CMAKE_MINIMUM_REQUIRED(VERSION 3.11...3.25)

SET(PROJECT_NAME coffee-engine)
PROJECT(${PROJECT_NAME} CXX)

OPTION(TBB_TEST "Enable testing" OFF)
OPTION(BUILD_SHARED_LIBS "Build dll(s) instead of lib(s)" ON)

SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
SET(CMAKE_CXX_STANDARD 17)

FILE(GLOB_RECURSE SOURCES 
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/*.inl)

FIND_PACKAGE(Vulkan REQUIRED)
ADD_SUBDIRECTORY(libs/fmt)
ADD_SUBDIRECTORY(libs/glfw)
ADD_SUBDIRECTORY(libs/glm)
ADD_SUBDIRECTORY(libs/tbb)

EXECUTE_PROCESS(COMMAND cmd /C "cd ${CMAKE_CURRENT_SOURCE_DIR}/libs/glm && git apply --ignore-space-change --ignore-whitespace ../glm.patch" OUTPUT_QUIET ERROR_QUIET)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${Vulkan_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/libs/single-headers)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE fmt::fmt glfw glm::glm)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC TBB::tbb)

ADD_COMPILE_DEFINITIONS(ZSTD_STATIC_LINKING_ONLY)
ADD_COMPILE_DEFINITIONS(WIN32_LEAN_AND_MEAN)
ADD_COMPILE_DEFINITIONS(NOMINMAX)

SET_TARGET_PROPERTIES(${PROJECT_NAME} fmt glfw glm tbb tbbmalloc tbbmalloc_proxy PROPERTIES VS_GLOBAL_VcpkgEnabled FALSE)

FOREACH(SOURCE IN ITEMS ${SOURCES})
	GET_FILENAME_COMPONENT(SOURCE_PATH "${SOURCE}" PATH)
	STRING(REPLACE "${CMAKE_SOURCE_DIR}" "" GROUP_PATH "${SOURCE_PATH}")
	STRING(REPLACE "/" "\\" GROUP_PATH "${GROUP_PATH}")
	SOURCE_GROUP("${GROUP_PATH}" FILES "${SOURCE}")
ENDFOREACH()